<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    tools:context=".fragments.AboutUsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_bs"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_bs"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_shop"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/logo_bs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph1"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/about_us_paragraph2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph2"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph3"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph4"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph5"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/young"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/young"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/yangyang"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph5" />

        <ImageView
            android:id="@+id/yangyang"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/yangyang"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/young"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/young" />

        <TextView
            android:id="@+id/about_us_paragraph6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph6"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/young"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph7"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            android:layout_marginStart="64dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph6"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph8"
            android:textColor="@color/black"
            android:layout_marginTop="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintTop_toTopOf="@id/about_us_paragraph7"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph9"
            android:textColor="@color/black"
            android:layout_marginStart="64dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph8"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph10"
            android:textColor="@color/black"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintTop_toTopOf="@id/about_us_paragraph9"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph11"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="italic|bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph12"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph13"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph14"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph15"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph16"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph17"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph18"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="italic|bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph19"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph20"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph21"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph22"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph23"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="italic|bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph24"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph25"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph26"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/about_us_paragraph27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us_paragraph27"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_us_paragraph26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>