<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    tools:context=".fragments.ContactFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/contactStatement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="5"
            android:textAlignment="center"
            android:text="@string/contact_statement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:hint="@string/contact_your_name"
            android:padding="1dp"
            android:inputType="textPersonName"
            android:background="@drawable/round_edittext"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactStatement" />

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:hint="@string/contact_your_email_address"
            android:padding="1dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/round_edittext"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <EditText
            android:id="@+id/subject"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:hint="@string/contact_email_subject"
            android:padding="1dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/round_edittext"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <EditText
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:textSize="14sp"
            android:hint="@string/contact_email_message"
            android:paddingHorizontal="1dp"
            android:paddingVertical="1dp"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="6dp"
            android:background="@drawable/round_edittext"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subject"  />

        <TextView
            android:id="@+id/charCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/message"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_send_button"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/charCounter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>